This is the complete deal so far

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <header>
       <h1> All about Me, Michelle Farage</h1>
     </header>.
-    <h2> I welcome you to get to know me as we spend more time together </h2>
+    <h2> I welcome you to get to know me as we spend more time together durring this amazing journey.</h2>
 
-    <p>I have lived in the Seattle for most of my life, where do you come from? </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
+    <h2>I have lived in the Seattle for most of my life, where do you come from? </h2>
+    <h2>This is the beginning of fulfilling my dream job. What is your dream job?</h2>
+    <h2>I have owned three business in my ifetime. Havev you ever thought about starting a business? </h2>
+    <h2> When I am creative there is nothing off limits, inculding fingerpainting. How about you?</h2>
+    <h2> When I am stressed, I like to run. Do you like running?</h2>
+    <h2> I also love to backpack. Does that sound like fun to you?</h2>
+    <h2> I also have twins. Do you think they are identical? </h2>
   </body>
-  <script src= "app.js" type= ""></script>
+  <script src= "app.js" type= "text/javascript"></script>
 </html>
