Added a sidebar and list to about me page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,33 @@
   <body>
     <header>
       <h1> All about Me, Michelle Farage</h1>
-    </header>.
+    </header>
+    <aside class="activities">
+      <h2> Things I like to do:</h2>
+      <ul class= "doing">
+        <li> Outdoor Activities
+          <ol>
+            <li> Run</li>
+            <li> Hike</li>
+            <li> Swim</li>
+          </ol>
+        </li>
+        <li> Indoor Activities
+          <ol>
+            <li> Read</li>
+            <li> Draw</li>
+            <li> Cook</li>
+          </ol>
+         </li>
+        <li> Acitivites I Fantasize About
+          <ol>
+            <li> Walk through walls</li>
+            <li> Teleporting </li>
+            <li> Speak though my Mind</li>
+          </ol>
+        </li>
+      </ul>
+    </aside>
     <h2> I welcome you to get to know me as we spend more time together durring this amazing journey.</h2>
 
     <h2>I have lived in the Seattle for most of my life, where do you come from? </h2>
