--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
     <h2> When I am stressed, I like to run. Do you like running?</h2>
     <h2> I also love to backpack. Does that sound like fun to you?</h2>
     <h2> I also have twins. Do you think they are identical? </h2>
+    <div class= "content-box">
+      <p class= "guess colors"> <h3> Let's Play </h3>
+        <p> What are my favorite Two colors?</p>
+          <ul>
+            <li>blue</li>
+            <li>green</li>
+            <li>purple</li>
+            <li>pink</li>
+            <li>orange</li>
+          </ul>
+      </p>
+      <p class= "What number"> What are my favorite prime number?</p>
+      <p> It is going to be between 1 and 50 </p>
+    </div>
   </body>
   <script src= "app.js" type= "text/javascript"></script>
 </html>
