corrected yesterday's prompt

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </aside>
     <h2> I welcome you to get to know me as we spend more time together durring this amazing journey.</h2>
 
-    <h2>I have lived in the Seattle for most of my life, where do you come from? </h2>
+    <h2>Hello! I would like to get to know you better, what is your name? </h2>
     <h2>This is the beginning of fulfilling my dream job. What is your dream job?</h2>
     <h2>I have owned three business in my ifetime. Havev you ever thought about starting a business? </h2>
     <h2> When I am creative there is nothing off limits, inculding fingerpainting. How about you?</h2>
