Added the box around the game

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       </ul>
     </aside>
     <h2> I welcome you to get to know me as we spend more time together durring this amazing journey.</h2>
-
     <h2>Hello! I would like to get to know you better, what is your name? </h2>
     <h2>This is the beginning of fulfilling my dream job. What is your dream job?</h2>
     <h2>I have owned three business in my ifetime. Havev you ever thought about starting a business? </h2>
@@ -45,17 +44,17 @@
     <h2> I also love to backpack. Does that sound like fun to you?</h2>
     <h2> I also have twins. Do you think they are identical? </h2>
     <div class= "content-box">
-      <p class= "guess colors"> <h3> Let's Play </h3>
+      <p class= "guess-colors"> <h3> Let's Play </h3>
         <p> What are my favorite Two colors?</p>
-          <ul>
+          <div class="color-list"><ul>
             <li>blue</li>
             <li>green</li>
             <li>purple</li>
             <li>pink</li>
             <li>orange</li>
-          </ul>
+          </ul></div>
       </p>
-      <p class= "What number"> What are my favorite prime number?</p>
+      <p class= "What-number"> What are my favorite prime number?</p>
       <p> It is going to be between 1 and 50 </p>
     </div>
   </body>
