--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h2> I also have twins. Do you think they are identical? </h2>
     <div class= "content-box">
       <p class= "guess-colors"> <h3> Let's Play </h3>
-        <p> What are my favorite Two colors?</p>
+        <p> What is my favorite color?</p>
           <div class="color-list"><ul>
             <li>blue</li>
             <li>green</li>
@@ -54,8 +54,8 @@
             <li>orange</li>
           </ul></div>
       </p>
-      <p class= "What-number"> What are my favorite prime number?</p>
-      <p> It is going to be between 1 and 50 </p>
+      <p class= "What-number"> What is my favorite  number?</p>
+     <P>It will be between 23 and 27</p>
     </div>
   </body>
   <script src= "app.js" type= "text/javascript"></script>
