Made change to html page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </ul></div>
       </p>
       <p class= "What-number"> What is my favorite  number?</p>
-     <P>It will be between 23 and 27</p>
+     <P>You will have four guesses.</p>
     </div>
   </body>
   <script src= "app.js" type= "text/javascript"></script>
