Pair programming with Matt

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li>orange</li>
           </ul></div>
       </p>
-      <p class= "What-number"> What is my favorite  number?</p>
+      <p class= "What-number"> What is my favorite  number between 10 and 30?</p>
      <P>You will have four guesses.</p>
     </div>
   </body>
