working on new script and css

--- a/index.html
+++ b/index.html
@@ -30,19 +30,20 @@
           <ol>
             <li> Walk through walls</li>
             <li> Teleporting </li>
-            <li> Speak though my Mind</li>
+            <li> Speak with my mind</li>
           </ol>
         </li>
       </ul>
     </aside>
-    <h2> I welcome you to get to know me as we spend more time together durring this amazing journey.</h2>
-    <h2>Hello! I would like to get to know you better, what is your name? </h2>
-    <h2>This is the beginning of fulfilling my dream job. What is your dream job?</h2>
-    <h2>I have owned three business in my ifetime. Havev you ever thought about starting a business? </h2>
-    <h2> When I am creative there is nothing off limits, inculding fingerpainting. How about you?</h2>
-    <h2> When I am stressed, I like to run. Do you like running?</h2>
-    <h2> I also love to backpack. Does that sound like fun to you?</h2>
-    <h2> I also have twins. Do you think they are identical? </h2>
+    <h2> Let's play a guessing game, so you can learn all about me.</h2>
+    <h2>I would like to get to know you better, what is your name? </h2>
+    <h2>Do I want to build web pages? As if I really need to ask that!</h2>
+    <h2>Have you ever thought about starting a business? Have I ever owned a business?</h2>
+    <h2> What is my feeling about fingerpainting? Likey?  NO Likey?</h2>
+    <h2>Do I like running? What do you do when you're stressed?</h2>
+    <h2>Do you think I like to backpack?</h2>
+    <h2> I also have twins. Are they are identical? </h2>
+    <h3> (All answers count, and for course points are irrelevant.)</h3>
     <div class= "content-box">
       <p class= "guess-colors"> <h3> Let's Play </h3>
         <p> What is my favorite color?</p>
