--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
             <li>orange</li>
           </ul></div>
       </p>
-      <p class= "What-number"> What is my favorite  number?</p>
-     <P>You will have four guesses.</p>
+      <p class= "What-number"> And my favorite number between 10 and 30?</p>
+     <P>You can take four guesses!</p>
     </div>
+    <footer>
+      <h1> Thank you for playing!</h>
+    </footer >
   </body>
   <script src= "app.js" type= "text/javascript"></script>
 </html>
