This morning i touched everything again

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     </style>
   </head>
   <body>
+    <div class="header">
     <header>
       <h1> All about Me, Michelle Farage</h1>
     </header>
+    </div>
     <aside class="activities">
       <h2> Things I like to do:</h2>
       <ul class= "doing">
@@ -19,31 +21,33 @@
             <li> Swim</li>
           </ol>
         </li>
-        <li> Indoor Activities
+        <li>Indoor Activities
           <ol>
-            <li> Read</li>
-            <li> Draw</li>
-            <li> Cook</li>
+            <li>Read</li>
+            <li>Draw</li>
+            <li>Cook</li>
           </ol>
          </li>
-        <li> Acitivites I Fantasize About
+        <li>Acitivites I Fantasize About
           <ol>
-            <li> Walk through walls</li>
-            <li> Teleporting </li>
-            <li> Speak with my mind</li>
+            <li>Walk through walls</li>
+            <li>Teleporting </li>
+            <li>Speak with my mind</li>
           </ol>
         </li>
       </ul>
     </aside>
-    <h2> Let's play a guessing game, so you can learn all about me.</h2>
-    <h2>I would like to get to know you better, what is your name? </h2>
-    <h2>Do I want to build web pages? As if I really need to ask that!</h2>
+    <div class="guess">
+    <h2>Let's play a guessing game, so you can learn all about me.</h2>
+    <h2>So we talk, I'd like to know your name too. </h2>
+    <h2>Do I want to build web pages? I think you know the answer!</h2>
     <h2>Have you ever thought about starting a business? Have I ever owned a business?</h2>
     <h2> What is my feeling about fingerpainting? Likey?  NO Likey?</h2>
     <h2>Do I like running? What do you do when you're stressed?</h2>
     <h2>Do you think I like to backpack?</h2>
-    <h2> I also have twins. Are they are identical? </h2>
-    <h3> (All answers count, and for course points are irrelevant.)</h3>
+    <h2>I also have twins. Are they are identical? </h2>
+    <h3> (All answers count, and for course are irrelevant.)</h3>
+    </div>
     <div class= "content-box">
       <p class= "guess-colors"> <h3> Let's Play </h3>
         <p> What is my favorite color?</p>
@@ -58,9 +62,11 @@
       <p class= "What-number"> And my favorite number between 10 and 30?</p>
      <P>You can take four guesses!</p>
     </div>
+    <div class= "footer">
     <footer>
-      <h1> Thank you for playing!</h>
-    </footer >
+      <h2> Thank you for playing! Goodbye.</h>
+    </footer>
+  </div>
   </body>
   <script src= "app.js" type= "text/javascript"></script>
 </html>
