Change to loop and html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="header">
     <header>
-      <h1> All about Me, Michelle Farage</h1>
+      <h1> All about Me, Michelle Farage. Welcome!</h1>
     </header>
     </div>
     <aside class="activities">
@@ -43,7 +43,7 @@
     <h2>Do I want to build web pages? I think you know the answer!</h2>
     <h2>Have you ever thought about starting a business? Have I ever owned a business?</h2>
     <h2> What is my feeling about fingerpainting? Likey?  NO Likey?</h2>
-    <h2>Do I like running? What do you do when you're stressed?</h2>
+    <h2>Do I like running? What do you do for excercise?</h2>
     <h2>Do you think I like to backpack?</h2>
     <h2>I also have twins. Are they are identical? </h2>
     <h3> (All answers count, and for course are irrelevant.)</h3>
@@ -64,7 +64,7 @@
     </div>
     <div class= "footer">
     <footer>
-      <h2> Thank you for playing! Goodbye.</h>
+      <h2> Thank you for playing! Come back soon.</h>
     </footer>
   </div>
   </body>
